# opendds-sandbox

./: .gitignore  Dockerfile  README.md  build.sh  connect.sh  docker-compose.yml  run-root.sh  run.sh
workspace/examples/calculator/: CMakeLists.txt  README.md  generate_corba_types.sh  run-client.sh  run-server.sh
workspace/examples/calculator/cpp/: calculator_client.cpp  calculator_server.cpp
workspace/examples/calculator/idl/: calculator.idl
workspace/examples/messenger/: CMakeLists.txt  README.md  create-network.sh  docker-compose.yml  generate_dds_types.sh  run-mesh.sh  run-publisher.sh  run-subscriber.sh  run-tao-inforepo.sh  run-tao-naming-service.sh
workspace/examples/messenger/doc/diagrams/: diagram.drawio
workspace/examples/messenger/idl/: Messenger.idl  build.sh
workspace/examples/sum/: CMakeLists.txt  README.md
workspace/examples/sum/idl/: .gitignore  Sum.idl
workspace/examples/sum/src/: publisher.cpp  subscriber.cpp
